# self-evolving-codegen

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  pyproject.toml  run_evolution.py
agents/: __init__.py  coder.py  orchestrator.py  planner.py  reviewer.py  tester.py
evolution/: analyzer.py  cache.py  evaluator.py  evolver.py  mock_data.py  models.py  tracker.py  visualize.py
graph/: __init__.py  workflow.py
models/: __init__.py  schemas.py
prompts/: coder.md  orchestrator.md  planner.md  reviewer.md  tester_gen_0.txt  tester_gen_1.txt
sandbox/: Dockerfile  entrypoint.sh  runner.py
tests/: test_evaluator.py  test_models.py  test_tracker.py  test_visualizer.py
